Fixing horizontal scrolling

--- a/assets/css/components/_equipments.scss
+++ b/assets/css/components/_equipments.scss
@@ -18,12 +18,13 @@
 
    display: flex;
    gap: 32px;
+
+   user-select: none;
    * {
       cursor: pointer;
    }
 
    flex-wrap: nowrap;
-
 
    @include scrollbar-styles;
 }
