--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -873,6 +873,10 @@ input[type=number] {
   display: -ms-flexbox;
   display: flex;
   gap: 32px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   -ms-flex-wrap: nowrap;
       flex-wrap: nowrap;
   overflow-y: hidden;
